my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EARRAY/EARRAY.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:18:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:20:7: error EARRAY: cannot use an array as a value: 'b.r[$i < 4]'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:22:7: error EARRAY: cannot use an array as a value: 'b.r[$i < 4]'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:24:7: error EARRAY: cannot use an array as a value: 'b.r[$i < 4]'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:26:7: error EARRAY: cannot use an array as a value: 'b.g[$i < 4]'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:28:6: error EARRAY: cannot use an array as a value: 'a[$i < 2]'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:31:6: error EARRAY: cannot use an array as a value: 'a[$i < 2]'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EARRAY.dml:33:20: error EARRAY: cannot use an array as a value: 'b.r[$i < 4]'
